After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 681763 - crashes at startup
crashes at startup
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: User Accounts
unspecified
Other Linux
: Normal critical
: ---
Assigned To: Control-Center Maintainers
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-08-13 14:18 UTC by William Jon McCann
Modified: 2012-08-18 17:36 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
bt (3.82 KB, text/plain)
2012-08-13 14:18 UTC, William Jon McCann
  Details
user-accounts: Fix crash on startup (2.93 KB, patch)
2012-08-18 17:36 UTC, Bastien Nocera
committed Details | Review

Description William Jon McCann 2012-08-13 14:18:17 UTC
Created attachment 221023 [details]
bt

crashes at startup
Comment 1 Bastien Nocera 2012-08-18 17:34:48 UTC
(In reply to comment #0)
> Created an attachment (id=221023) [details]
> bt
> 
> crashes at startup

Put it in the comment field directly next time, otherwise the dupe finder doesn't work, and we can't search function names.
Comment 2 Bastien Nocera 2012-08-18 17:36:07 UTC
Created attachment 221706 [details] [review]
user-accounts: Fix crash on startup

Due to badly installed PolicyKit files.
Comment 3 Bastien Nocera 2012-08-18 17:36:29 UTC
Attachment 221706 [details] pushed as 923f279 - user-accounts: Fix crash on startup