user-accounts: Fix crash on startup

Due to badly installed PolicyKit files.

https://bugzilla.gnome.org/show_bug.cgi?id=681763